apps/outline/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - outline.${TSNET}
      secretName: outline-tls-secret
  rules:
    - host: outline.${TSNET}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline
                port:
                  number: 3000
